--- a/Milestone1/index.html
+++ b/Milestone1/index.html
@@ -29,6 +29,6 @@
             <h4>What is the goal of the site?</h4>
             <p>To have information on what I have done to help get a job.</p>
         </main>
-        <footer></footer>
+        <footer>Copyright &copy; 2026</footer>
     </body>
 </html>
