--- a/Milestone1/competition.html
+++ b/Milestone1/competition.html
@@ -10,8 +10,8 @@
             <h1>Cole Thomas Resume</h1>
         </header>
         <nav>
+            <a href="competition.html">Competition</a> &nbsp; &nbsp;
             <a href="index.html">Home</a> &nbsp; &nbsp;
-            <a href="competetion.html">Competetion</a> &nbsp; &nbsp;
             <a href="audience.html">Audience</a>
         </nav>
         <main>
