--- a/Milestone1/index.html
+++ b/Milestone1/index.html
@@ -11,7 +11,7 @@
         </header>
         <nav>
             <a href="index.html">Home</a> &nbsp; &nbsp;
-            <a href="competetion.html">Competetion</a> &nbsp; &nbsp;
+            <a href="competition.html">Competetion</a> &nbsp; &nbsp;
             <a href="audience.html">Audience</a>
         </nav>
         <main>
