--- a/Food/index.html
+++ b/Food/index.html
@@ -4,6 +4,11 @@
     <head>
         <meta charset="utf-8">
      <title>Food</title>
+     <style>
+        a {
+            color:burlywood;
+        }
+     </style>
     </head>
     </header>
     <div>
