--- a/Food/index.html
+++ b/Food/index.html
@@ -8,6 +8,9 @@
         a {
             color:burlywood;
         }
+        nav {
+            border: 2px solid red;
+        }
      </style>
     </head>
     </header>
@@ -15,11 +18,14 @@
     <body>
         <h1>Food Information</h1>
         <h2>Yummy Food</h2>
+        <nav>
+        <hr>
         <p>
             <a href="fastfood.html">Fast Food</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
             <a href="https://www.tacobell.com" target="_blank">Mexican Food</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
             Pasta &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
             Indian Food</p>
+        </nav>
         <p><b>Lorem ipsum dolor sit amet</b>, <i>adipiscing elit</i>, <strong>sed do eiusmod tempor incididunt</strong> ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <ol>
         <li>List item 1</li>
