--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -17,8 +17,12 @@
       <a href="faculty.html">Faculty</a> &nbsp;
       <a href="alumni.html">Alumni</a>
   </nav>
+  <div id="studenthero">
+    <img src="utahtechimages/students.jpg" alt="students" width="300px">
+  </div>
   <main>
     <h2>Why Attend Utah Tech?</h2>
+    <image src
     <dl>
       <dt>Open</dt>
       <dd>Utah Tech University is an open-access institution that offers access to open educational resources.</dd>
