--- a/utahtech3/faculty.html
+++ b/utahtech3/faculty.html
@@ -21,8 +21,8 @@
     
   </div>
   <main>
-    <h2>Why Attend Utah Tech?</h2>
-    <h3>Active  Learning</h3>
+    <h2>Faculty at Utah Tech</h2>
+<h3>Active  Learning</h3>
 <p>Classes get students ready to enter the work industry and provide them with the skills needed today.</p>
 <h3>Online Classes</h3>
 <p>15% of classes at Utah Tech are online and accessible to those outside the region.</p>
@@ -31,7 +31,7 @@
   </main>
   <footer>
       Copyright &copy; 2025 Utah Tech University<br>
-      <a href="mailto:firstname.lastname@utahtech.edu">firstname.lastname@utahtech.edu</a>
+      <a href="mailto:28thomacole@utsuccess.org">28thomacole@utsuccess.org</a>
   </footer>
   </div>
 </body>
