--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -18,11 +18,11 @@
       <a href="alumni.html">Alumni</a>
   </nav>
   <div id="studenthero">
-    <img src="utahtechimages/students.jpg" alt="students" width="300px">
+    
   </div>
   <main>
     <h2>Why Attend Utah Tech?</h2>
-    <image src
+    <img src="utahtechimages/students.jpg" alt="students" width="300px">
     <dl>
       <dt>Open</dt>
       <dd>Utah Tech University is an open-access institution that offers access to open educational resources.</dd>
@@ -35,7 +35,7 @@
   </main>
   <footer>
       Copyright &copy; 2025 Utah Tech University<br>
-      <a href="mailto:firstname.lastname@utahtech.edu">firstname.lastname@utahtech.edu</a>
+      <a href="mailto:28thomacole@utsuccess.org">28thomacole@utsuccess.org</a>
   </footer>
   </div>
 </body>
