--- a/utahtech3/faculty.html
+++ b/utahtech3/faculty.html
@@ -17,7 +17,7 @@
       <a href="faculty.html">Faculty</a> &nbsp;
       <a href="alumni.html">Alumni</a>
   </nav>
-  <div id="studentfaculty">
+  <div id="facultyhero">
     
   </div>
   <main>
