--- a/Milestone3/index.html
+++ b/Milestone3/index.html
@@ -6,5 +6,19 @@
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
 </head>
+<body>
+<div id="wrapper">
+    <header class="hero">Girl Friday</header>
+    <nav class="hero"></nav>
+    <main>
+        <section class="hero">
+
+        </section>
+        <div class="gallery">
+        </div>
+        <footer></footer>
+    </main>
+</div>
+</body>
 
 </html>
