--- a/Milestone3/index.html
+++ b/Milestone3/index.html
@@ -11,13 +11,11 @@
     <header class="hero">Girl Friday</header>
     <nav class="hero"></nav>
     <main>
-        <section class="hero">
-
-        </section>
+        <section class="hero"></section>
         <div class="gallery">
         </div>
-        <footer></footer>
     </main>
+    <footer></footer>
 </div>
 </body>
 
