--- a/Milestone3/index.html
+++ b/Milestone3/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <div id="wrapper">
-    <header class="hero">Girl Friday</header>
-    <nav class="hero"></nav>
+        <header class="hero" id="header">Girl Friday</header>
+        <nav class="hero" id="nav"></nav>
+        <div class="hero" id="background"></div>
     <main>
-        <section class="hero"></section>
         <div class="gallery">
         </div>
     </main>
